version/0.3/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.3.1 <https://github.com/ansys/scade-git/releases/tag/v0.3.1>`_ - September 23, 2026
======================================================================================

.. tab-set::


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump pypa/gh-action-pypi-publish v1.14.2
          - `#104 <https://github.com/ansys/scade-git/pull/104>`_


`0.3.0 <https://github.com/ansys/scade-git/releases/tag/v0.3.0>`_ - September 23, 2026
======================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Bump Python and SCADE versions
          - `#52 <https://github.com/ansys/scade-git/pull/52>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - fix: Enhance robustness
          - `#58 <https://github.com/ansys/scade-git/pull/58>`_

        * - Maintenance missing or outdated check-vulnerabilities and check-actions-security ansys actions
          - `#78 <https://github.com/ansys/scade-git/pull/78>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.2.0
          - `#50 <https://github.com/ansys/scade-git/pull/50>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - build(deps): bump the dependencies group across 1 directory with 4 updates
          - `#53 <https://github.com/ansys/scade-git/pull/53>`_, `#62 <https://github.com/ansys/scade-git/pull/62>`_

        * - Bump build from 1.3.0 to 1.4.0 in the dependencies group
          - `#79 <https://github.com/ansys/scade-git/pull/79>`_

        * - Bump build from 1.4.0 to 1.4.1 in the dependencies group
          - `#84 <https://github.com/ansys/scade-git/pull/84>`_

        * - Bump build from 1.4.1 to 1.4.4 in the dependencies group
          - `#89 <https://github.com/ansys/scade-git/pull/89>`_

        * - Bump the dependencies group across 1 directory with 6 updates
          - `#100 <https://github.com/ansys/scade-git/pull/100>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - build(deps): bump ansys/actions from 8 to 9 in the actions group
          - `#54 <https://github.com/ansys/scade-git/pull/54>`_

        * - docs: Update ``CONTRIBUTORS.md`` with the latest contributors
          - `#57 <https://github.com/ansys/scade-git/pull/57>`_

        * - Fix: Remove limitation with dulwich dependencies
          - `#65 <https://github.com/ansys/scade-git/pull/65>`_

        * - Feat: Reuse \`Ide\` and \`Command\` classes from ansys-scade-guitools
          - `#77 <https://github.com/ansys/scade-git/pull/77>`_

        * - Add SECURITY.md
          - `#80 <https://github.com/ansys/scade-git/pull/80>`_

        * - Update missing or outdated files
          - `#82 <https://github.com/ansys/scade-git/pull/82>`_, `#99 <https://github.com/ansys/scade-git/pull/99>`_

        * - Bump actions/download-artifact from 7.0.0 to 8.0.1 in the actions group
          - `#83 <https://github.com/ansys/scade-git/pull/83>`_

        * - Update repository configuration files
          - `#86 <https://github.com/ansys/scade-git/pull/86>`_

        * - Bump pypa/gh-action-pypi-publish from 1.13.0 to 1.14.0 in the actions group
          - `#88 <https://github.com/ansys/scade-git/pull/88>`_

        * - Bump pypa/gh-action-pypi-publish from 1.14.0 to 1.14.1 in the actions group
          - `#95 <https://github.com/ansys/scade-git/pull/95>`_

        * - Update license metadata in pyproject.toml
          - `#98 <https://github.com/ansys/scade-git/pull/98>`_


  .. tab-item:: Miscellaneous

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Build(deps): bump ansys/actions from 9 to 10 in the actions group
          - `#55 <https://github.com/ansys/scade-git/pull/55>`_

        * - Fix: Update AUTHORS
          - `#66 <https://github.com/ansys/scade-git/pull/66>`_

        * - Build(deps): bump build from 1.2.2.post1 to 1.3.0 in the dependencies group across 1 directory
          - `#67 <https://github.com/ansys/scade-git/pull/67>`_

        * - Build(deps): bump the actions group with 2 updates
          - `#68 <https://github.com/ansys/scade-git/pull/68>`_

        * - Build(deps): bump the dependencies group across 1 directory with 5 updates
          - `#73 <https://github.com/ansys/scade-git/pull/73>`_

        * - Build(deps): bump the actions group across 1 directory with 5 updates
          - `#74 <https://github.com/ansys/scade-git/pull/74>`_

        * - Chore: Update license headers
          - `#76 <https://github.com/ansys/scade-git/pull/76>`_


`0.2.0 <https://github.com/ansys/scade-git/releases/tag/v0.2.0>`_ - March 21, 2025
==================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - feat: Add register and unregister entry points for Extensions Manager
          - `#49 <https://github.com/ansys/scade-git/pull/49>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - fix: Limit flit version
          - `#48 <https://github.com/ansys/scade-git/pull/48>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - build(deps): bump the dependencies group with 4 updates
          - `#40 <https://github.com/ansys/scade-git/pull/40>`_

        * - build(deps): bump the dependencies group with 5 updates
          - `#41 <https://github.com/ansys/scade-git/pull/41>`_

        * - build(deps): bump the dependencies group with 2 updates
          - `#43 <https://github.com/ansys/scade-git/pull/43>`_

        * - build(deps): bump the dependencies group with 3 updates
          - `#45 <https://github.com/ansys/scade-git/pull/45>`_

        * - build(deps): bump ansys-sphinx-theme from 1.2.6 to 1.3.2 in the dependencies group
          - `#46 <https://github.com/ansys/scade-git/pull/46>`_


  .. tab-item:: Documentation

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.1.3
          - `#38 <https://github.com/ansys/scade-git/pull/38>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - ci: Upload the coverage results
          - `#28 <https://github.com/ansys/scade-git/pull/28>`_

        * - build(deps): bump codecov/codecov-action from 4 to 5 in the actions group
          - `#42 <https://github.com/ansys/scade-git/pull/42>`_

        * - ci: Fix steps for creating a release
          - `#47 <https://github.com/ansys/scade-git/pull/47>`_


  .. tab-item:: Test

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - build(deps): bump the dependencies group with 3 updates
          - `#44 <https://github.com/ansys/scade-git/pull/44>`_


`0.1.3 <https://github.com/ansys/scade-git/releases/tag/v0.1.3>`_ - 2024-09-26
==============================================================================

Fixed
^^^^^

- fix: Make sure the directory %APPDATA%\SCADE\Customize exists when registering the package `#31 <https://github.com/ansys/scade-git/pull/31>`_
- fix:add changelog action in cicd `#34 <https://github.com/ansys/scade-git/pull/34>`_
- fix: The package is not loaded by SCADE 2024 R2 `#36 <https://github.com/ansys/scade-git/pull/36>`_
- fix: Update the change log only when creating a new release `#37 <https://github.com/ansys/scade-git/pull/37>`_


Documentation
^^^^^^^^^^^^^

- maint: technical review `#25 <https://github.com/ansys/scade-git/pull/25>`_
- docs: Add the parameter --user in the pip install command line `#33 <https://github.com/ansys/scade-git/pull/33>`_


Maintenance
^^^^^^^^^^^

- ci: use trusted publishers `#26 <https://github.com/ansys/scade-git/pull/26>`_
- ci: remove the artifact examples `#27 <https://github.com/ansys/scade-git/pull/27>`_

.. vale on